force-app/main/default/objects/Opportunity/fields/Angariador__c.field-meta.xml
<CustomField>
    <fullName>Angariador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quem trouxe o imovel para a carteira. Copiado do dono do contrato.</description>
    <label>Angariador</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Negócios Angariados</relationshipLabel>
    <relationshipName>Negocios_Angariados</relationshipName>
    <type>Lookup</type>
</CustomField>