force-app/main/default/objects/Opportunity/fields/Comissao_Angariacao__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Angariacao__c</fullName>
    <description>Metade da comissao que remunera a angariacao. So existe com venda.</description>
    <formula>Comissao_Terravista__c * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parte da Angariação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>