force-app/main/default/objects/Opportunity/fields/Comissao_Angariador__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Angariador__c</fullName>
    <description>Valor que o angariador recebe deste negocio.</description>
    <formula>Comissao_Terravista__c * 0.5 * Angariador__r.Percentagem_Comissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão do Angariador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>