force-app/main/default/objects/Opportunity/fields/Comissao_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Consultor__c</fullName>
    <description>Valor que o dono do negocio recebe.</description>
    <formula>(Comissao_Terravista__c * 0.5 * Owner.Percentagem_Comissao__c)
+ IF(Angariador__c = OwnerId, Comissao_Terravista__c * 0.5 * Owner.Percentagem_Comissao__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão do Consultor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>