force-app/main/default/objects/Opportunity/fields/Comissao_Terravista__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Terravista__c</fullName>
    <description>Receita da agencia: comissao do contrato sobre o valor do negocio.</description>
    <formula>IF(
  OR(
    RecordType.DeveloperName = &quot;Servicos&quot;,
    ISBLANK(Imovel__r.Contrato__r.Comissao__c)
  ),
  0,
  Amount * Imovel__r.Contrato__r.Comissao__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão Terravista</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>