force-app/main/default/objects/Opportunity/fields/Comissao_Venda__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Venda__c</fullName>
    <description>Metade da comissao que remunera quem fechou o negocio.</description>
    <formula>Comissao_Terravista__c * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parte da Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>