force-app/main/default/objects/Opportunity/fields/Data_CPCV__c.field-meta.xml
<CustomField>
    <fullName>Data_CPCV__c</fullName>
    <description>Data do Contrato Promessa de Compra e Venda. Não se reaproveitou o objeto Contract: esse é o contrato de mediação, onde a Terravista é parte e que é dono dos imóveis. No CPCV as partes são o comprador e o vendedor, e a Terravista é só mediadora.</description>
    <label>Data do CPCV</label>
    <type>Date</type>
</CustomField>