force-app/main/default/objects/Opportunity/fields/Data_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_Visita__c</fullName>
    <description>Carimbado por Flow quando se agenda um Evento no negócio.</description>
    <label>Data da Visita</label>
    <type>DateTime</type>
</CustomField>