force-app/main/default/objects/Opportunity/fields/Dias_Sem_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Dias_Sem_Atividade__c</fullName>
    <description>Dias desde a ultima atividade registada no negocio.</description>
    <formula>IF(
  OR(ISBLANK(LastActivityDate), IsClosed),
  null,
  MAX(0, TODAY() - LastActivityDate)
)</formula>
    <label>Dias Sem Atividade</label>
    <precision>5</precision><scale>0</scale>
    <type>Number</type>
</CustomField>