force-app/main/default/objects/Opportunity/fields/Imoveis_Mostrados__c.field-meta.xml
<CustomField>
    <fullName>Imoveis_Mostrados__c</fullName>
    <description>Quantos imóveis foram mostrados neste negócio.</description>
    <label>Imóveis Mostrados</label>
    <summaryForeignKey>Imovel_Interesse__c.Oportunidade__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>