force-app/main/default/objects/Opportunity/fields/Imoveis_Recusados__c.field-meta.xml
<CustomField>
    <fullName>Imoveis_Recusados__c</fullName>
    <description>Quantos dos imóveis mostrados o cliente recusou.</description>
    <label>Imóveis Recusados</label>
    <summaryFilterItems>
        <field>Imovel_Interesse__c.Estado__c</field>
        <operation>equals</operation>
        <value>Recusado</value>
    </summaryFilterItems>
    <summaryForeignKey>Imovel_Interesse__c.Oportunidade__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>