force-app/main/default/objects/Opportunity/fields/Imovel__c.field-meta.xml
<CustomField>
    <fullName>Imovel__c</fullName>
    <description>Imovel objeto deste negocio.</description>
    <label>Imóvel</label>
    <referenceTo>Imovel__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>