force-app/main/default/objects/Opportunity/fields/Linha_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Linha_Negocio__c</fullName>
    <description>Segmento de cliente: particular ou empresa.</description>
    <label>Linha de Negócio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>B2C</fullName><default>true</default><label>B2C — Particular</label></value>
            <value><fullName>B2B</fullName><default>false</default><label>B2B — Empresa</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>