force-app/main/default/objects/Opportunity/fields/Margem_Terravista__c.field-meta.xml
<CustomField>
    <fullName>Margem_Terravista__c</fullName>
    <description>O que sobra para a agencia depois de pagas as comissoes.</description>
    <formula>Comissao_Terravista__c - Comissao_Consultor__c
- IF(Angariador__c = OwnerId, 0, Comissao_Angariador__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem Terravista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>