force-app/main/default/objects/Opportunity/fields/Motivo_Perda__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perda__c</fullName>
    <description>Motivo da perda do negocio.</description>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Preco</fullName><default>false</default><label>Preço</label></value>
            <value><fullName>Financiamento recusado</fullName><default>false</default><label>Financiamento recusado</label></value>
            <value><fullName>Concorrencia</fullName><default>false</default><label>Concorrência</label></value>
            <value><fullName>Desistiu</fullName><default>false</default><label>Desistiu</label></value>
            <value><fullName>Imovel retirado</fullName><default>false</default><label>Imóvel retirado do mercado</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>