force-app/main/default/objects/Opportunity/fields/Proxima_Acao__c.field-meta.xml
<CustomField>
    <fullName>Proxima_Acao__c</fullName>
    <description>Responde a PP8: nenhuma negociacao fica sem se saber o que fazer a seguir, mesmo passando meses.</description>
    <label>Próxima Ação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>