force-app/main/default/objects/Opportunity/fields/Proxima_Acao_Data__c.field-meta.xml
<CustomField>
    <fullName>Proxima_Acao_Data__c</fullName>
    <label>Data da Próxima Ação</label>
    <type>Date</type>
</CustomField>