force-app/main/default/objects/Opportunity/fields/Proximo_Passo__c.field-meta.xml
<CustomField>
    <fullName>Proximo_Passo__c</fullName>
    <description>Leitura do negócio gerada por AI: o que está em risco e o que fazer.</description>
    <label>Próximo Passo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>