force-app/main/default/objects/Opportunity/fields/Sinal__c.field-meta.xml
<CustomField>
    <fullName>Sinal__c</fullName>
    <description>Sinal entregue na assinatura do CPCV.</description>
    <label>Sinal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>