force-app/main/default/objects/Opportunity/fields/Valor_Estimado_Angariacao__c.field-meta.xml
<CustomField>
    <fullName>Valor_Estimado_Angariacao__c</fullName>
    <description>Comissao futura estimada de um contrato. Nao e receita.</description>
    <formula>IF(AND(RecordType.DeveloperName = "Angariacao", NOT(ISPICKVAL(StageName, "Perdido"))), Amount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Estimado — Angariação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>