force-app/main/default/objects/Opportunity/fields/Valor_Estimado_Venda__c.field-meta.xml
<CustomField>
    <fullName>Valor_Estimado_Venda__c</fullName>
    <description>Pipeline de venda e arrendamento em aberto. Nao e faturacao.</description>
    <formula>IF(
  AND(
    RecordType.DeveloperName &lt;&gt; &quot;Angariacao&quot;,
    RecordType.DeveloperName &lt;&gt; &quot;Servicos&quot;,
    NOT(IsClosed)
  ),
  Amount,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Estimado — Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>