force-app/main/default/objects/Opportunity/recordTypes/Angariacao.recordType-meta.xml
<RecordType>
    <fullName>Angariacao</fullName>
    <active>true</active>
    <businessProcess>Angariacao</businessProcess>
    <description>Conquistar o contrato de mediação de um imóvel. O Amount não é receita.</description>
    <label>Angariação</label>
</RecordType>