force-app/main/default/objects/Opportunity/recordTypes/Arrendamento.recordType-meta.xml
<RecordType>
    <fullName>Arrendamento</fullName>
    <active>true</active>
    <businessProcess>Arrendamento</businessProcess>
    <description>Arrendamento de imóvel: fiador, caução e duração.</description>
    <label>Arrendamento</label>
</RecordType>