force-app/main/default/objects/Opportunity/recordTypes/Venda_Habitacao.recordType-meta.xml
<RecordType>
    <fullName>Venda_Habitacao</fullName>
    <active>true</active>
    <businessProcess>Venda_Habitacao</businessProcess>
    <description>Venda de apartamento, moradia ou fração.</description>
    <label>Venda de Habitação</label>
</RecordType>