force-app/main/default/objects/Opportunity/recordTypes/Venda_Terreno.recordType-meta.xml
<RecordType>
    <fullName>Venda_Terreno</fullName>
    <active>true</active>
    <businessProcess>Venda_Terreno</businessProcess>
    <description>Venda de terreno. Inclui avaliação de viabilidade construtiva.</description>
    <label>Venda de Terreno</label>
</RecordType>