force-app/main/default/objects/Opportunity/validationRules/Avanco_exige_atividade_registada.validationRule-meta.xml
<ValidationRule>
    <fullName>Avanco_exige_atividade_registada</fullName>
    <active>true</active>
    <description>Um negocio nao avanca sem atividade registada. Perdido fica de fora.</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  NOT(ISPICKVAL(StageName, "Interesse Registado")),
  NOT(ISPICKVAL(StageName, "Contacto Inicial")),
  NOT(ISPICKVAL(StageName, "Perdido")),
  ISBLANK(LastActivityDate)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Registe a chamada, visita ou reunião antes de avançar a fase.</errorMessage>
</ValidationRule>