force-app/main/default/objects/Opportunity/validationRules/Cliente_obrigatorio_a_partir_da_proposta.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_obrigatorio_a_partir_da_proposta</fullName>
    <active>true</active>
    <description>Nao se faz uma proposta sem cliente identificado.</description>
    <errorConditionFormula>AND(
  OR(ISPICKVAL(StageName, "Proposta Apresentada"),
     ISPICKVAL(StageName, "Proposta de Mediacao"),
     ISPICKVAL(StageName, "Negociacao"),
     ISPICKVAL(StageName, "CPCV Assinado"),
     ISPICKVAL(StageName, "Escritura Realizada"),
     ISPICKVAL(StageName, "Contrato Assinado")),
  ISBLANK(AccountId)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Indique o cliente do negócio.</errorMessage>
</ValidationRule>