force-app/main/default/objects/Opportunity/validationRules/Data_de_fecho_nao_pode_estar_no_passado.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_de_fecho_nao_pode_estar_no_passado</fullName>
    <active>true</active>
    <description>So obriga a atualizar a data quando o negocio avanca de fase.</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  NOT(IsClosed),
  CloseDate &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>A data de fecho está no passado. Atualize a previsão.</errorMessage>
</ValidationRule>