force-app/main/default/objects/Opportunity/validationRules/Imovel_obrigatorio_apos_visita.validationRule-meta.xml
<ValidationRule>
    <fullName>Imovel_obrigatorio_apos_visita</fullName>
    <active>true</active>
    <description>Sem imovel a comissao calcula zero e a faturacao fica errada.</description>
    <errorConditionFormula>AND(
  OR(RecordType.DeveloperName = "Venda_Habitacao", RecordType.DeveloperName = "Arrendamento"),
  NOT(ISPICKVAL(StageName, "Interesse Registado")),
  NOT(ISPICKVAL(StageName, "Perdido")),
  ISBLANK(Imovel__c)
)</errorConditionFormula>
    <errorDisplayField>Imovel__c</errorDisplayField>
    <errorMessage>Indique o imóvel. Sem ele não há cálculo de comissão.</errorMessage>
</ValidationRule>