force-app/main/default/objects/Opportunity/validationRules/Motivo_obrigatorio_ao_perder.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_obrigatorio_ao_perder</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, "Perdido"),
  ISBLANK(TEXT(Motivo_Perda__c))
)</errorConditionFormula>
    <errorDisplayField>Motivo_Perda__c</errorDisplayField>
    <errorMessage>Indique o motivo da perda.</errorMessage>
</ValidationRule>