force-app/main/default/objects/Opportunity/validationRules/Nao_reabrir_negocio_fechado.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_reabrir_negocio_fechado</fullName>
    <active>true</active>
    <description>Reabrir um negocio fechado altera os relatorios historicos.</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  OR(ISPICKVAL(PRIORVALUE(StageName), "Escritura Realizada"),
     ISPICKVAL(PRIORVALUE(StageName), "Contrato Assinado"),
     ISPICKVAL(PRIORVALUE(StageName), "Perdido"))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Um negócio fechado não se reabre. Crie um novo.</errorMessage>
</ValidationRule>