force-app/main/default/objects/Opportunity/validationRules/Proxima_acao_obrigatoria_em_negociacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Proxima_acao_obrigatoria_em_negociacao</fullName>
    <active>true</active>
    <description>Negociacoes de terreno arrastam-se: obriga a definir o passo seguinte.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, "Negociacao"),
  ISBLANK(NextStep)
)</errorConditionFormula>
    <errorDisplayField>NextStep</errorDisplayField>
    <errorMessage>Indique a próxima ação combinada.</errorMessage>
</ValidationRule>