force-app/main/default/objects/Opportunity/validationRules/Valor_obrigatorio_a_partir_da_proposta.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_obrigatorio_a_partir_da_proposta</fullName>
    <active>true</active>
    <description>Sem valor nao ha comissao, pipeline nem previsao.</description>
    <errorConditionFormula>AND(
  OR(ISPICKVAL(StageName, "Proposta Apresentada"),
     ISPICKVAL(StageName, "Proposta de Mediacao"),
     ISPICKVAL(StageName, "Negociacao"),
     ISPICKVAL(StageName, "CPCV Assinado"),
     ISPICKVAL(StageName, "Escritura Realizada"),
     ISPICKVAL(StageName, "Contrato Assinado")),
  OR(ISBLANK(Amount), Amount &lt;= 0)
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Indique o valor do negócio.</errorMessage>
</ValidationRule>