force-app/main/default/objects/Opportunity/validationRules/Viabilidade_antes_de_negociar_terreno.validationRule-meta.xml
<ValidationRule>
    <fullName>Viabilidade_antes_de_negociar_terreno</fullName>
    <active>true</active>
    <description>Nao se negoceia um terreno sem tipo de solo e area de construcao.</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = "Venda_Terreno",
  OR(ISPICKVAL(StageName, "Negociacao"),
     ISPICKVAL(StageName, "CPCV Assinado"),
     ISPICKVAL(StageName, "Escritura Realizada")),
  OR(ISBLANK(TEXT(Imovel__r.Tipo_Solo__c)), ISBLANK(Imovel__r.Area_Bruta_Construcao_m2__c))
)</errorConditionFormula>
    <errorDisplayField>Imovel__c</errorDisplayField>
    <errorMessage>Registe no imóvel o tipo de solo e a área bruta de construção.</errorMessage>
</ValidationRule>