force-app/main/default/objects/Opportunity/validationRules/Visita_realizada_exige_evento.validationRule-meta.xml
<ValidationRule>
    <fullName>Visita_realizada_exige_evento</fullName>
    <active>true</active>
    <description>So se aplica a venda e arrendamento. Nao bloqueia cargas de dados.</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  ISPICKVAL(StageName, "Visita Realizada"),
  OR(RecordType.DeveloperName = "Venda_Habitacao",
     RecordType.DeveloperName = "Arrendamento"),
  ISBLANK(Data_Visita__c)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Marque o Evento da visita antes de avançar a fase.</errorMessage>
</ValidationRule>