force-app/main/default/objects/Opportunity/listViews/A_adormecer.listView-meta.xml
<ListView>
    <fullName>A_adormecer</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Dias_Sem_Atividade__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dias_Sem_Atividade__c</field>
        <operation>greaterThan</operation>
        <value>14</value>
    </filters>
    <label>😴 A Adormecer (14+ dias)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>