force-app/main/default/objects/Opportunity/listViews/Pipeline_Angariacao.listView-meta.xml
<ListView>
    <fullName>Pipeline_Angariacao</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Linha_Negocio__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType.DeveloperName</field>
        <operation>equals</operation>
        <value>Angariacao</value>
    </filters>
    <filters>
        <field>IsClosed</field>
        <operation>equals</operation>
        <value>false</value>
    </filters>
    <label>🏗 Pipeline de Angariação</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>